tdf#156681: Revert "tdf#152048: Fix underline width for Kashida-justified text"

This reverts commit 43a5400063b17ed4ba4cbb38bdf5da4a991f60e2.

The idea is to revert it in libreoffice-7-6 and libreoffice-7-5 branches
only since tdf#156681 is fixed in master by 507a8745870e9a755be3a72f59c6e9a9d811fdcf
"vcl: Use doubles for glyph item coordinates"

This commit also reverts 34df6c92e513c5f428eff7c9cb1d6b9831eeb323
"tdf#152048: Add test"

Change-Id: Id246c388df45d16b9bce86d1827949c644fc8517
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155969
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155972